style: update app label in deployment.yaml

--- a/apps/focalboard/deployment.yaml
+++ b/apps/focalboard/deployment.yaml
@@ -11,7 +11,7 @@ spec:
   template:
     metadata:
       labels:
-        app: vaultwarden
+        app: focalboard
     spec:
       containers:
         - name: focalboard
