chore(deployment.yaml): update focalboard image

--- a/apps/focalboard/deployment.yaml
+++ b/apps/focalboard/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: focalboard
-          image: mattermost/focalboard:latest
+          image: mattermost/focalboard
           volumeMounts:
             - name: focalboard-volume
               mountPath: /opt/focalboard/data
