--- a/apps/homepage/release.yaml
+++ b/apps/homepage/release.yaml
@@ -106,6 +106,11 @@ spec:
                 ping: https://vaultwarden.pacholoamit.com/
                 icon: https://github.com/bitwarden/brand/blob/master/icons/128x128.png?raw=true
 
+            - Focalboard:
+                href: https://focalboard.pacholoamit.com/
+                description: Open source project management
+                ping: https://focalboard.pacholoamit.com/
+                icon: focalboard.png
       widgets:
         # show the kubernetes widget, with the cluster summary and individual nodes
         - kubernetes:
