--- a/apps/homepage/configmap.yaml
+++ b/apps/homepage/configmap.yaml
@@ -5,7 +5,8 @@ metadata:
   namespace: default
 data:
   bookmarks.yaml: |
-    - Bookmarks:
-      - Github Code Search:
-          - icon: github-light
-            href: https://cs.github.com/
+    bookmarks:
+      - Bookmarks:
+        - Github Code Search:
+            - icon: github-light
+              href: https://cs.github.com/
