--- a/apps/homepage/configmap.yaml
+++ b/apps/homepage/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: homepage-config
   namespace: default
 data:
-  bookmarks.yaml: |
+  bookmarks.yaml: 
     bookmarks:
       - Bookmarks:
         - Github Code Search:
