--- a/apps/homepage/configmap.yaml
+++ b/apps/homepage/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: homepage-config
   namespace: default
 data:
-  bookmarks.yaml: 
+  bookmarks.yaml: |
     bookmarks:
       - Bookmarks:
         - Github Code Search:
@@ -61,3 +61,7 @@ data:
           - Unzip:
               - abbr: UZ
                 href: https://unzip.dev/archive/
+  services.yaml: ""
+  widgets.yaml: ""
+  settings.yaml: ""
+  docker.yaml: ""
