--- a/apps/homepage/configmap.yaml
+++ b/apps/homepage/configmap.yaml
@@ -97,7 +97,39 @@ data:
             ping: https://focalboard.pacholoamit.com/
             icon: focalboard.png
 
-  widgets.yaml: ""
+  widgets.yaml: |
+    - kubernetes:
+        cluster:
+          show: true
+          cpu: true
+          memory: true
+          showLabel: true
+          label: "cluster"
+        nodes:
+          show: true
+          cpu: true
+          memory: true
+          showLabel: true
+    - longhorn:
+        # Show the expanded view
+        expanded: true
+        # Shows a node representing the aggregate values
+        total: true
+        # Shows the node names as labels
+        labels: true
+        # Show the nodes
+        nodes: true        
+    - openmeteo:
+        label: Cebu # optional
+        latitude: 10.31672
+        longitude: 123.89071
+        timezone: Asia/Manila # optional
+        units: metric # or imperial
+        cache: 5 # Time in minutes to cache API responses, to stay within limits
+    - search:
+        provider: google
+        target: _blank
+  kubernetes.yaml: |
+    mode: cluster
   settings.yaml: ""
-  kubernetes.yaml: ""
   docker.yaml: ""
