--- a/apps/homepage/release.yaml
+++ b/apps/homepage/release.yaml
@@ -38,140 +38,8 @@ spec:
     # This enables the service account to access the necessary resources
     enableRbac: true
     config:
-      useExistingConfigMap: homepage-config
-      # bookmarks:
-      #   - Bookmarks:
-      #     - Github Code Search:
-      #         - icon: github-light
-      #           href: https://cs.github.com/
-      #     - Dev Resources:
-      #         - abbr: DR
-      #           href: https://resource.fyi
-      #     - Dev Shirts:
-      #         - abbr: DS
-      #           href: https://www.devshirt.club/
-      #     - Javascript Patterns:
-      #         - icon: javascript
-      #           href: https://javascriptpatterns.vercel.app/patterns
-      #     - Uiverse:
-      #         - abbr: UI
-      #           href: https://uiverse.io/all
-      #     - Advanced JS Functions:
-      #         - abbr: AF
-      #           href: https://www.paulsblog.dev/advanced-javascript-functions-to-improve-code-quality/
-      #   - Software News:
-      #     - Dev (Top of the week):
-      #         - icon: https://d2fltix0v2e0sb.cloudfront.net/dev-black.png
-      #           href: https://dev.to/top/week
-      #     - Daily Dev:
-      #         - abbr: DD
-      #           href: https://app.daily.dev/
-      #     - Github Trending:
-      #         - icon: github-light
-      #           href: https://github.com/trending?since=weekly
-      #   - Reddit Threads:
-      #     - r/ProgrammerHumour:
-      #         - icon: reddit
-      #           href: https://www.reddit.com/r/ProgrammerHumor/top/?t=week
-      #     - r/unixporn:
-      #         - icon: https://styles.redditmedia.com/t5_2sx2i/styles/communityIcon_7fixeonxbxd41.png?width=256&v=enabled&s=09e1c0d643c91e5dada2c7f73adb4effdb0bdf7d
-      #           href: https://www.reddit.com/r/unixporn/top/?t=week
-      #     - r/selfhosted:
-      #         - icon: https://styles.redditmedia.com/t5_32hch/styles/communityIcon_b2t5inv46z331.png?width=256&v=enabled&s=5049c971d4eaf5f8c05ee019586381828d5ef56e
-      #           href: https://www.reddit.com/r/selfhosted/top/?t=week
-      #   - Programming & trends:
-      #       - NodeJS Weekly:
-      #           - icon: https://seeklogo.com/images/N/nodejs-logo-FBE122E377-seeklogo.com.png
-      #             href: https://nodeweekly.com
-      #       - Javascript Weekly:
-      #           - icon: javascript
-      #             href: https://javascriptweekly.com
-      #       - Golang Weekly:
-      #           - icon: https://go.dev/blog/go-brand/Go-Logo/PNG/Go-Logo_Aqua.png
-      #             href: https://golangweekly.com
-      #       - Rust Weekly:
-      #           - icon: rust
-      #             href: https://this-week-in-rust.org/
-      #       - Unzip:
-      #           - abbr: UZ
-      #             href: https://unzip.dev/archive/
-      # services:
-      #   - Infrastructure:
-      #       - Proxmox:
-      #           href: https://pve.pacholoamit.com/
-      #           description: Server management
-      #           icon: proxmox.png
-      #           ping: https://pve.pacholoamit.com/
-      #           widget:
-      #             type: proxmox
-      #             url: https://pve.pacholoamit.com
-      #             username: api@pam!api
-      #             password: ***REMOVED*** # TODO: Make this into a sealed-secret
-                
-      #       - Weaveworks Dashboard:
-      #           href: https://weave.pacholoamit.com/
-      #           description: Weave K8s Flux Dashboard
-      #           icon: https://avatars.githubusercontent.com/u/9976052?s=200&v=4
-      #           ping: https://weave.pacholoamit.com/
+      useExistingConfigMap: homepage-configmap
 
-      #       - Longhorn:
-      #           href: https://longhorn.pacholoamit.com/
-      #           description: Cloud native distributed block storage
-      #           icon: longhorn.png
-
-      #   - Apps/Services:
-      #       - Vaultwarden:
-      #           href: https://vaultwarden.pacholoamit.com/
-      #           description: Self-hosted password manager
-      #           ping: https://vaultwarden.pacholoamit.com/
-      #           icon: https://github.com/bitwarden/brand/blob/master/icons/128x128.png?raw=true
-
-      #       - Focalboard:
-      #           href: https://focalboard.pacholoamit.com/
-      #           description: Open source project management
-      #           ping: https://focalboard.pacholoamit.com/
-      #           icon: focalboard.png
-      # widgets:
-      #   # show the kubernetes widget, with the cluster summary and individual nodes
-        # - kubernetes:
-        #     cluster:
-        #       show: true
-        #       cpu: true
-        #       memory: true
-        #       showLabel: true
-        #       label: "cluster"
-        #     nodes:
-        #       show: true
-        #       cpu: true
-        #       memory: true
-        #       showLabel: true
-        # - longhorn:
-        #     # Show the expanded view
-        #     expanded: true
-        #     # Shows a node representing the aggregate values
-        #     total: true
-        #     # Shows the node names as labels
-        #     labels: true
-        #     # Show the nodes
-        #     nodes: true        
-        # - openmeteo:
-        #     label: Cebu # optional
-        #     latitude: 10.31672
-        #     longitude: 123.89071
-        #     timezone: Asia/Manila # optional
-        #     units: metric # or imperial
-        #     cache: 5 # Time in minutes to cache API responses, to stay within limits
-        # - search:
-        #     provider: google
-        #     target: _blank
-      # kubernetes:
-      #   mode: cluster
-      # settings:
-      #   providers:
-      #     longhorn:
-      #       url: https://longhorn.pacholoamit.com
-      #       username: pacholoamit
-      #       password: ***REMOVED*** # TODO: MAKE THIS INTO A SECRET
 
 
 
