--- a/infrastructure/sops-secrets-operator/kustomization.yaml
+++ b/infrastructure/sops-secrets-operator/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: flux-system
 resources:
-  - release.yaml
   - repository.yaml
-  # - configmap.yaml
-  
+  - release.yaml
+  - secret.yaml
