--- a/infrastructure/sops-secrets-operator/release.yaml
+++ b/infrastructure/sops-secrets-operator/release.yaml
@@ -19,4 +19,7 @@ spec:
   upgrade:
     crds: CreateReplace
   values:
-    # add secret here
+    secretsAsEnvVars:
+      - name: SOPS_AGE_KEY_FILE
+        secretName: age
+        secretKey: age-key.txt
