--- a/clusters/home/sops-controller.yaml
+++ b/clusters/home/sops-controller.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: sops-controller
+  name: sops
   namespace: flux-system
 spec:
   dependsOn:
