--- a/clusters/home/homepage.yaml
+++ b/clusters/home/homepage.yaml
@@ -1,21 +1,21 @@
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: homepage
-  namespace: flux-system
-spec:
-  interval: 1m
-  prune: true
-  wait: true
-  # dependsOn:
-  #   - name: sops
-  #   - name: sealed-secrets
-  decryption:
-    provider: sops
-    secretRef:
-      name: age
-  path: ./apps/homepage
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: homepage
+#   namespace: flux-system
+# spec:
+#   interval: 1m
+#   prune: true
+#   wait: true
+#   # dependsOn:
+#   #   - name: sops
+#   #   - name: sealed-secrets
+#   decryption:
+#     provider: sops
+#     secretRef:
+#       name: age
+#   path: ./apps/homepage
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
