fix: Update n8n image repository

--- a/apps/n8n/release.yaml
+++ b/apps/n8n/release.yaml
@@ -25,7 +25,7 @@ spec:
       interval: 1m
   values:
     image:
-      repository: 8gears/n8n
+      repository: n8nio/n8n
       tag: 1.18.0
       pullPolicy: IfNotPresent
     config:
