--- a/clusters/home/n8n.yaml
+++ b/clusters/home/n8n.yaml
@@ -1,16 +1,16 @@
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: n8n
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: longhorn
-  interval: 1m
-  prune: true
-  wait: true
-  path: ./apps/n8n
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: n8n
+#   namespace: flux-system
+# spec:
+#   dependsOn:
+#     - name: longhorn
+#   interval: 1m
+#   prune: true
+#   wait: true
+#   path: ./apps/n8n
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
