--- a/apps/n8n/release.yaml
+++ b/apps/n8n/release.yaml
@@ -32,6 +32,7 @@ spec:
       database:
         type: sqlite
     persistence:
+      enabled: true
       type: dynamic
       storageClassName: longhorn
       accessModes:
