--- a/apps/n8n/release.yaml
+++ b/apps/n8n/release.yaml
@@ -34,6 +34,7 @@ spec:
     persistence:
       enabled: true
       type: dynamic
+      storageClass: longhorn
       storageClassName: longhorn
       accessModes:
         - ReadWriteMany
