chore(release.yaml): Add host configuration

--- a/apps/n8n/release.yaml
+++ b/apps/n8n/release.yaml
@@ -29,6 +29,7 @@ spec:
       tag: 1.18.0
       pullPolicy: IfNotPresent
     config:
+      host: n8n.pacholoamit.com
       database:
         type: sqlite
     persistence:
