chore: Update n8n release.yaml configuration

--- a/apps/n8n/release.yaml
+++ b/apps/n8n/release.yaml
@@ -29,7 +29,11 @@ spec:
       tag: 1.18.0
       pullPolicy: IfNotPresent
     config:
+      generic:
+        timezone: Asia/Manila
       host: n8n.pacholoamit.com
+      protocol: https
+      port: 443
       database:
         type: sqlite
     persistence:
