--- a/apps/n8n/release.yaml
+++ b/apps/n8n/release.yaml
@@ -50,6 +50,7 @@ spec:
       enabled: true
       annotations:
         kubernetes.io/ingress.class: nginx
+        nginx.ingress.kubernetes.io/proxy-body-size: 999m
         gethomepage.dev/enabled: "true"
         gethomepage.dev/description: Open source workflow automation tool
         gethomepage.dev/group: Apps/Services
