feat: add metadata annotations for gethomepage.dev

--- a/apps/vaultwarden/service.yaml
+++ b/apps/vaultwarden/service.yaml
@@ -19,6 +19,11 @@ metadata:
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/description: Self-hosted password manager
+    gethomepage.dev/group: Apps/Services
+    gethomepage.dev/icon: https://github.com/bitwarden/brand/blob/master/icons/128x128.png?raw=true
+    gethomepage.dev/name: Vaultwarden
 spec:
   rules:
     - host: vaultwarden.pacholoamit.com
