style: add quotes to ingress class value

--- a/infrastructure/weave-works-dashboard/release.yaml
+++ b/infrastructure/weave-works-dashboard/release.yaml
@@ -23,7 +23,7 @@ spec:
     ingress:
       enabled: true
       annotations:
-        kubernetes.io/ingress.class: nginx
+        kubernetes.io/ingress.class: "nginx"
         gethomepage.dev/enabled: "true"
         gethomepage.dev/description: Weave K8s Flux Dashboard
         gethomepage.dev/group: Infrastructure
