--- a/apps/vaultwarden/service.yaml
+++ b/apps/vaultwarden/service.yaml
@@ -1,21 +1,7 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: vaultwarden-svc
-  namespace: default
-spec:
-  type: LoadBalancer
-  selector:
-    app: vaultwarden
-  ports:
-    - port: 80
-      targetPort: 80
-
----
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: vaultwarden-ingress
+  name: vaultwarden
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
@@ -33,6 +19,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: vaultwarden-svc
+                name: vaultwarden
                 port:
                   number: 80
