--- a/apps/homepage/release.yaml
+++ b/apps/homepage/release.yaml
@@ -34,26 +34,21 @@ spec:
     serviceAccount:
       create: true
       name: homepage
+      service:
+        main:
+          ports:
+            http:
+              port: 3000
 
     # This enables the service account to access the necessary resources
     enableRbac: true
     config:
       useExistingConfigMap: homepage-config
 
-
-
-
     ingress:
       main:
-        enabled: true
+        enabled: false
         annotations:
-          # Example annotations to add Homepage to your Homepage!
-          gethomepage.dev/enabled: "false"
-          gethomepage.dev/name: "Pach's Homepage"
-          gethomepage.dev/description: "Dynamically Detected Homepage"
-          gethomepage.dev/group: "Dynamic"
-          gethomepage.dev/icon: "homepage.png"
-          kubernetes.io/ingress.class: "nginx"
         hosts:
           - host: homelab.pacholoamit.com
             paths:
