--- a/apps/homepage/service.yaml
+++ b/apps/homepage/service.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
     name: homepage
-    namespace: homepage
+    namespace: default
     annotations:
         kubernetes.io/ingress.class: "nginx"
 spec:
