refactor: Enable ingress for homepage deployment

--- a/apps/homepage/release.yaml
+++ b/apps/homepage/release.yaml
@@ -47,7 +47,7 @@ spec:
 
     ingress:
       main:
-        enabled: false
+        enabled: true
         annotations:
         hosts:
           - host: homelab.pacholoamit.com
