--- a/apps/homepage/release.yaml
+++ b/apps/homepage/release.yaml
@@ -44,6 +44,7 @@ spec:
       main:
         enabled: true
         annotations:
+          kubernetes.io/ingress.class: "nginx"
         hosts:
           - host: homelab.pacholoamit.com
             paths:
