--- a/apps/vaultwarden/deployment.yaml
+++ b/apps/vaultwarden/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: vaultwarden
-          image: vaultwarden/server
+          image: vaultwarden/server:1.30.1
           volumeMounts:
             - name: vaultwarden-volume
               mountPath: /data
