--- a/apps/vaultwarden/deployment.yaml
+++ b/apps/vaultwarden/deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: vaultwarden
   namespace: default
+  labels:
+    app.kubernetes.io/name: vaultwarden
 spec:
   replicas: 1
   selector:
