--- a/infrastructure/weave-works-dashboard/service.yaml
+++ b/infrastructure/weave-works-dashboard/service.yaml
@@ -10,6 +10,7 @@ metadata:
     gethomepage.dev/group: Infrastructure
     gethomepage.dev/icon: https://avatars.githubusercontent.com/u/9976052?s=200&v=4
     gethomepage.dev/name: Weaveworks Dashboard
+    gethomepage.dev/pod-selector: app.kubernetes.io/instance=ww-gitops
 spec:
   rules:
     - host: weave.pacholoamit.com
