--- a/helm/developer-portfolio/values.yaml
+++ b/helm/developer-portfolio/values.yaml
@@ -50,10 +50,10 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: www.pacholoamit.com
+    - host: developer-portfolio.local
       paths:
         - path: /
-  
+          pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
