--- a/apps/developer-portfolio/release.yaml
+++ b/apps/developer-portfolio/release.yaml
@@ -18,12 +18,13 @@ spec:
         image:
             repository: ghcr.io/pacholoamit/developer-portfolio
             pullPolicy: IfNotPresent
-            tag: v0.1.1
+            tag: latest
         ingress:
             enabled: true
+            annotations:
+                kubernetes.io/ingress.class: nginx
             hosts:
                 - host: www.pacholoamit.com
                   paths:
                       - path: /
-            annotations:
-                kubernetes.io/ingress.class: nginx
+
