--- a/clusters/home/developer-portfolio.yaml
+++ b/clusters/home/developer-portfolio.yaml
@@ -1,14 +1,14 @@
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: developer-portfolio
-#   namespace: flux-system
-# spec:
-#   interval: 1m
-#   prune: true
-#   wait: true
-#   path: ./apps/developer-portfolio
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: developer-portfolio
+  namespace: flux-system
+spec:
+  interval: 1m
+  prune: true
+  wait: true
+  path: ./apps/developer-portfolio
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
