feat(release.yaml): add pathType: Prefix for root path

--- a/apps/developer-portfolio/release.yaml
+++ b/apps/developer-portfolio/release.yaml
@@ -27,4 +27,5 @@ spec:
                 - host: www.pacholoamit.com
                   paths:
                       - path: /
+                        pathType: Prefix
 
