--- a/apps/developer-portfolio/release.yaml
+++ b/apps/developer-portfolio/release.yaml
@@ -23,6 +23,13 @@ spec:
             enabled: true
             annotations:
                 kubernetes.io/ingress.class: nginx
+                nginx.ingress.kubernetes.io/proxy-body-size: 999m
+                gethomepage.dev/enabled: "true"
+                gethomepage.dev/description: My personal developer portfolio
+                gethomepage.dev/group: Apps/Services
+                gethomepage.dev/icon: javascript.png
+                gethomepage.dev/name: developer portfolio
+                gethomepage.dev/pod-selector: app.kubernetes.io/name=developer-portfolio
             hosts:
                 - host: www.pacholoamit.com
                   paths:
