--- a/apps/developer-portfolio/release.yaml
+++ b/apps/developer-portfolio/release.yaml
@@ -18,7 +18,7 @@ spec:
         image:
             repository: ghcr.io/pacholoamit/developer-portfolio
             pullPolicy: IfNotPresent
-            tag: latest
+            tag: v0.1.2
         ingress:
             enabled: true
             annotations:
