--- a/apps/vaultwarden/service.yaml
+++ b/apps/vaultwarden/service.yaml
@@ -1,3 +1,18 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: vaultwarden
+  namespace: default
+spec:
+  type: LoadBalancer
+  selector:
+    app: vaultwarden
+  ports:
+    - port: 80
+      targetPort: 80
+
+
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
