refactor: Update MySQL release values and secrets

--- a/apps/mysql/release.yaml
+++ b/apps/mysql/release.yaml
@@ -25,3 +25,10 @@ spec:
       interval: 1m
   values:
     auth:
+      username: pacholoamit
+    persistence: 
+      enabled: true
+      storageClass: longhorn
+      accessModes:
+        - ReadWriteMany
+      size: 8Gi
