--- a/apps/mysql/secret.yaml
+++ b/apps/mysql/secret.yaml
@@ -1,7 +1,29 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysql
-  namespace: default
+    name: mysql
+    namespace: default
 data:
-  mysql-root-password: W^WNgq!BoFZLCwJ5pnuJRN7#JCL7GAQVpiZrvfK*iE3XYDeD
+    mysql-root-password: ENC[AES256_GCM,data:TB2EEzDDXgGR5aDIxEp4JHvHyes/4OXI2PlMFwavLKqbEvjO3Q/D3yCKJfYc1TpD,iv:vuxa5cRd5RuXdzCMtRoeFKJBvB9+QpLlpGEOFGYr1qg=,tag:6Br1yFJP8VbY8eemp5OHIg==,type:str]
+    mysql-password: ENC[AES256_GCM,data:kxzwgz7WzRYPXX31po86JxKx6iXgKUAT4YyfsMYALigJ+Qbx9TZMQLCrvd1sQOx4,iv:B6EEoM2snqnHHbmxOc9tILYkYOcHd+eg0U+dIgNkkjw=,tag:gMQtddAFdwAcqHMbNDe93g==,type:str]
+    mysql-replication-password: ENC[AES256_GCM,data:BrDsHllDviMQpF50woRw0DfLYtzuSw1J09YPO0XmzCOsATo1IW6vHuIDMFTQtX7j,iv:j97yvq0YMRnZvh9naFSStpsL4i5hLoNINKwfmnGswD4=,tag:tvaupXjbEBRMtnsEVNAGag==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age19hfjt8tc0etz2swhums26jrsu8avaslpawkvrjcxj4tr0kwy6a2s4td64z
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyU2c4Y3Nvckp1bGpMODRC
+            QjJNdzR3Q3h6TDR5dW9qOCtPbXlneVl3VTBrCkd4TzJZamhPZUhSWmxLdTB2ZU5V
+            WHowbzU2N0oyaTdMbnpxVWNNbVArSzAKLS0tICtYRzRaWkY5ZTEzRkVIY0Jyd2RC
+            L3RYTHlYVHEyMURxQm4zODduaEFoOEkK/n2YpZY6TJgnhjUsipJwC34Lnp/t/Pxu
+            9rbi9mp0aGKtQ4TJP2R5vV+YZgwPOyd3jsLEGRozv1Ys/GgTpGqNvw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2023-11-23T21:11:50Z"
+    mac: ENC[AES256_GCM,data:0VQOEGXymGeBwawO2anA12ff40SUctcU9CxzEqx9JhVLDyNHFnKuWBRICYqc5ydeyLkds2nmymwkWH0QCmcQdjIKrzFmDyd1iVfiJbnwQN19lRgBs3rt2IRch6QQpCnOIECf/BYqgJrTDTMSgplJ+Dmnoj1GsQ2zKNMoOl7mcTA=,iv:c1aBiHfLtaU3TcV7WG5Pev+m9fSE7cCUcSSe6LUHsiM=,tag:msnIMt8wTwBE6rrPuVsVMw==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
