feat: Add decryption configuration for MySQL

--- a/clusters/home/mysql.yaml
+++ b/clusters/home/mysql.yaml
@@ -5,6 +5,10 @@ metadata:
   name: mysql
   namespace: flux-system
 spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   dependsOn:
     - name: longhorn
   interval: 1m
