--- a/clusters/home/mysql.yaml
+++ b/clusters/home/mysql.yaml
@@ -1,20 +1,20 @@
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: mysql
-  namespace: flux-system
-spec:
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-age
-  dependsOn:
-    - name: longhorn
-  interval: 1m
-  prune: true
-  wait: true
-  path: ./apps/mysql
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: mysql
+#   namespace: flux-system
+# spec:
+#   decryption:
+#     provider: sops
+#     secretRef:
+#       name: sops-age
+#   dependsOn:
+#     - name: longhorn
+#   interval: 1m
+#   prune: true
+#   wait: true
+#   path: ./apps/mysql
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
