feat: Update mysql and wordpress secret.yaml files

--- a/apps/mysql/secret.yaml
+++ b/apps/mysql/secret.yaml
@@ -3,10 +3,10 @@ kind: Secret
 metadata:
     name: mysql
     namespace: default
-data:
-    mysql-root-password: ENC[AES256_GCM,data:TB2EEzDDXgGR5aDIxEp4JHvHyes/4OXI2PlMFwavLKqbEvjO3Q/D3yCKJfYc1TpD,iv:vuxa5cRd5RuXdzCMtRoeFKJBvB9+QpLlpGEOFGYr1qg=,tag:6Br1yFJP8VbY8eemp5OHIg==,type:str]
-    mysql-password: ENC[AES256_GCM,data:kxzwgz7WzRYPXX31po86JxKx6iXgKUAT4YyfsMYALigJ+Qbx9TZMQLCrvd1sQOx4,iv:B6EEoM2snqnHHbmxOc9tILYkYOcHd+eg0U+dIgNkkjw=,tag:gMQtddAFdwAcqHMbNDe93g==,type:str]
-    mysql-replication-password: ENC[AES256_GCM,data:BrDsHllDviMQpF50woRw0DfLYtzuSw1J09YPO0XmzCOsATo1IW6vHuIDMFTQtX7j,iv:j97yvq0YMRnZvh9naFSStpsL4i5hLoNINKwfmnGswD4=,tag:tvaupXjbEBRMtnsEVNAGag==,type:str]
+stringData:
+    mysql-root-password: ENC[AES256_GCM,data:5lRTwP90pV1waaCiO/3+S3CmrOGySg/Pudwm4BXX0BFc1qxzgQsLW5k5Y6j7jJtb,iv:amXEytVA56fP0BfAC2QgVEAI+XfioUvvEHBlqGG/OnM=,tag:N1z43rAoiCPdjWRCh8SJAQ==,type:str]
+    mysql-password: ENC[AES256_GCM,data:CF/nYnB5aa7tfc/ge9Ny8KXJGQw3Y2YzVbpwq1PRHVVTMIxfGw8Fw7iXhdH5WFkR,iv:fPe8mwVapvQaiyUgWrPkxFOHxV6l3buAZFguiPghnXo=,tag:EjzMWOFkUobKey/cO5I0GQ==,type:str]
+    mysql-replication-password: ENC[AES256_GCM,data:wuhAIrc/BEGG9thEoW2lZLSsUF8zDQwMNZl7b2HN+/NcTlJN1gUvBuxNjQgleUzv,iv:skTwg9rK25w7GIwcAgZYsekzRp5PcOGvHmmuU+MOIt0=,tag:oFHE45sV7zO+rTw8qBDEXw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age19hfjt8tc0etz2swhums26jrsu8avaslpawkvrjcxj4tr0kwy6a2s4td64z
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyU2c4Y3Nvckp1bGpMODRC
-            QjJNdzR3Q3h6TDR5dW9qOCtPbXlneVl3VTBrCkd4TzJZamhPZUhSWmxLdTB2ZU5V
-            WHowbzU2N0oyaTdMbnpxVWNNbVArSzAKLS0tICtYRzRaWkY5ZTEzRkVIY0Jyd2RC
-            L3RYTHlYVHEyMURxQm4zODduaEFoOEkK/n2YpZY6TJgnhjUsipJwC34Lnp/t/Pxu
-            9rbi9mp0aGKtQ4TJP2R5vV+YZgwPOyd3jsLEGRozv1Ys/GgTpGqNvw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6T2sxVldqbVZiWjlHajJ5
+            OEF1cGVFeHg5L2diVE5wODJvUUpDaFNBZHlrCkNnZzBGYW1RaFBvcTd3VndEMytR
+            bm9iZEZCN1FlMXE3MHFFU3VpWGlSR0kKLS0tIEk0bzhtNkltKzVaVkxLbUJ5L2s5
+            S0lMencrU3dMaXNSNStISWlyUVgwbEUKXgh7SWGUWE+urCOwlbxRysHZgHyR/XM4
+            YxAGV8S5S2peYVrrmyHMmmg/grjiYVc5sE28WqqmM/ISJ7NLROYiHA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-23T21:11:50Z"
-    mac: ENC[AES256_GCM,data:0VQOEGXymGeBwawO2anA12ff40SUctcU9CxzEqx9JhVLDyNHFnKuWBRICYqc5ydeyLkds2nmymwkWH0QCmcQdjIKrzFmDyd1iVfiJbnwQN19lRgBs3rt2IRch6QQpCnOIECf/BYqgJrTDTMSgplJ+Dmnoj1GsQ2zKNMoOl7mcTA=,iv:c1aBiHfLtaU3TcV7WG5Pev+m9fSE7cCUcSSe6LUHsiM=,tag:msnIMt8wTwBE6rrPuVsVMw==,type:str]
+    lastmodified: "2023-11-23T21:38:15Z"
+    mac: ENC[AES256_GCM,data:luklt874NGYAzBxIfkh398mH/SNm2f9WFTsOc7Fx5q8E+08DJtI2dBMhaJMkNmPxf23dJZze7yGh6jOPY3VqnPeRFrpfVLyy/yYltWEr8zdI8gA9cJtS79VoQspgGQyXPki+q8BULc+CqUthHYTv+uAGiVECIlmoPTTD2lIXQPw=,iv:I2j60BGNbBvis6hSQLRfzMWs49mvxlHSMzHD18u/TG8=,tag:wMpjRGx2saHVzg5wJwru7Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
