refactor: update mysql authentication method

--- a/apps/mysql/release.yaml
+++ b/apps/mysql/release.yaml
@@ -26,6 +26,7 @@ spec:
   values:
     auth:
       username: pacholoamit
+      existingSecret: mysql
     persistence: 
       enabled: true
       storageClass: longhorn
