refactor: disable probes for primary in mysql release.yaml

--- a/apps/mysql/release.yaml
+++ b/apps/mysql/release.yaml
@@ -28,6 +28,13 @@ spec:
       username: pacholoamit
       database: mysql
       existingSecret: mysql
+    primary:
+      startupProbe:
+        enabled: false
+      readinessProbe:
+        enabled: false
+      livenessProbe:
+        enabled: false
     persistence: 
       enabled: true
       storageClass: longhorn
