--- a/helm/developer-portfolio/templates/deployment.yaml
+++ b/helm/developer-portfolio/templates/deployment.yaml
@@ -40,14 +40,8 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+          livenessProbe: null
+          readinessProbe: null
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
