fix(secret): add namespace to wordpress secret

--- a/apps/wordpress/secret.yaml
+++ b/apps/wordpress/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: wordpress
+    namespace: default
 stringData:
     mariadb-password: ENC[AES256_GCM,data:ijYDovjw3RrIcVfF0L4g/AsK/pfV1QwbRm1ZNka7seLu7FadXn8YyYzPJIdwovuT,iv:1d2Jaa4j4sm7honDG1F29lWaqxs7WYMS/6/shtMuhJ4=,tag:8EO32dITTyo5OAGOjA2+xg==,type:str]
 sops:
